--- a/index.html
+++ b/index.html
@@ -12,277 +12,270 @@
           
 <style> 
 /* ============================================================
-   OMNISCIENCE V100 PRO - SYSTÈME DE DESIGN GLOBAL
+   OMNISCIENCE V100 PRO - SYSTEME DE DESIGN GLOBAL
    ============================================================ */
 
 :root {
-    /* Palette de couleurs Scientifique */
+    /* Palette Mode Nuit (Défaut) */
     --bg-dark: #050507;
     --panel-bg: rgba(18, 18, 26, 0.95);
     --border-dim: #252533;
-    --accent-cyan: #00d2ff;  /* Système */
-    --accent-green: #00ff88; /* Navigation */
-    --accent-pink: #ff00ff;  /* Dynamique */
+    --accent-cyan: #00d2ff;  /* Ingénierie */
+    --accent-green: #00ff88; /* Physique/UKF */
+    --accent-pink: #ff00ff;  /* Sport/SVT */
     --accent-gold: #ffcc00;  /* Astro */
     --text-main: #e0e0e0;
     --text-dim: #888888;
     --danger: #ff4444;
+    --glass: rgba(255, 255, 255, 0.03);
 }
 
-/* Base & Reset */
-* { box-sizing: border-box; }
+/* Bascule Mode Jour (Haute Visibilité) */
+body.light-mode {
+    --bg-dark: #f0f2f5;
+    --panel-bg: #ffffff;
+    --border-dim: #d1d9e6;
+    --text-main: #1a1a1b;
+    --text-dim: #555555;
+    --accent-cyan: #0077cc;
+    --accent-green: #008844;
+    --accent-pink: #cc00cc;
+    --accent-gold: #aa8800;
+}
+
+/* Reset & Base */
+* { box-sizing: border-box; margin: 0; padding: 0; }
 
 body {
     background-color: var(--bg-dark);
     color: var(--text-main);
-    font-family: 'Segoe UI', 'Courier New', monospace;
-    margin: 0;
-    padding: 0;
+    font-family: 'Segoe UI', 'Ubuntu Mono', monospace;
     overflow-x: hidden;
-    line-height: 1.4;
+    transition: background 0.3s ease, color 0.3s ease;
 }
 
-/* Conteneur WebGL de fond */
-#webgl-container {
-    position: fixed;
-    top: 0; left: 0; width: 100%; height: 100%;
-    z-index: -1;
-}
-
-/* ============================================================
-   GRID SYSTEM (4 COLONNES)
-   ============================================================ */
-
+/* Grille Principale (4 Colonnes) */
 .dashboard-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Force 4 colonnes sur PC */
-    gap: 10px;
-    padding: 10px;
-    z-index: 10;
-    position: relative;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 12px;
+    padding: 15px;
+    margin-bottom: 180px; /* Espace pour le HUD fixe */
 }
 
-/* Adaptation Mobile / Tablettes */
-@media (max-width: 1200px) { .dashboard-container { grid-template-columns: repeat(2, 1fr); } }
-@media (max-width: 600px) { .dashboard-container { grid-template-columns: 1fr; } }
-
-/* Panneaux de données */
+/* Panels */
 .panel {
     background: var(--panel-bg);
     border: 1px solid var(--border-dim);
-    border-radius: 8px;
-    padding: 12px;
-    backdrop-filter: blur(5px);
-    box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+    border-radius: 10px;
+    padding: 15px;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 4px 20px rgba(0,0,0,0.5);
 }
 
+body.light-mode .panel {
+    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+}
+
+/* Titres de sections */
 h2 {
-    font-size: 0.8rem;
+    font-size: 0.85rem;
+    letter-spacing: 1.5px;
     text-transform: uppercase;
-    letter-spacing: 1px;
-    margin: 0 0 10px 0;
+    margin-bottom: 12px;
     padding-bottom: 5px;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px dashed var(--border-dim);
     display: flex;
     align-items: center;
     gap: 8px;
 }
 
-/* Couleurs par Colonne */
-.column-1 h2 { color: var(--accent-cyan); }
-.column-2 h2 { color: var(--accent-green); }
-.column-3 h2 { color: var(--accent-pink); }
-.column-4 h2 { color: var(--accent-gold); }
+h2 i { font-size: 1rem; }
 
-/* Lignes de données */
+/* Data Points (Lignes de données) */
 .data-point {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 0.75rem;
-    padding: 4px 0;
-    border-bottom: 1px solid rgba(255,255,255,0.03);
-}
-
-.data-point span:first-child { color: var(--text-dim); }
-.data-point span[id] { 
-    font-weight: bold; 
-    font-family: 'Consolas', monospace;
-    color: #fff;
-}
-
-/* Mise en évidence des valeurs actives */
-span[id]:not(:empty):not(::-moz-placeholder) { color: #00ff00; }
-
-/* ============================================================
-   CONTROLES & BOUTONS
-   ============================================================ */
-
-.controls-grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 6px;
-    margin-top: 10px;
-}
-
-button {
-    background: #222;
-    color: #fff;
-    border: 1px solid #444;
-    padding: 8px;
-    font-size: 0.7rem;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 0.2s;
-}
-
-button:hover { background: #333; border-color: #666; }
-
-.control-input-full {
-    grid-column: span 2;
-    background: rgba(255,255,255,0.05);
-    padding: 8px;
-    border-radius: 4px;
-    margin-top: 5px;
-}
-
-input, select {
-    width: 100%;
-    background: #000;
-    color: #0f0;
-    border: 1px solid #333;
-    padding: 4px;
+    padding: 6px 0;
     font-size: 0.8rem;
+    border-bottom: 1px solid var(--glass);
 }
 
-/* ============================================================
-   LE HUD MAÎTRE (OMNISCIENCE)
-   ============================================================ */
-
-/* Ce style s'applique à la partie basse que tu as fournie */
-.master-hud-container {
-    position: relative;
-    z-index: 20;
-    max-width: 600px;
-    margin: 20px auto;
-    pointer-events: none; /* Laisse passer le clic vers la carte sauf sur les boutons */
+.data-point span:first-child {
+    color: var(--text-dim);
 }
 
-/* Le gros bloc vert */
-.hud-box {
-    background: rgba(0, 30, 0, 0.9);
-    border: 2px solid #0f0;
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 0 30px rgba(0, 255, 0, 0.2);
-    pointer-events: auto;
-}
-
-#sp-main {
-    font-family: 'Orbitron', 'Consolas', sans-serif;
-    text-shadow: 0 0 15px rgba(255,255,255,0.5);
-}
-
-#start-btn {
-    background: #0f0;
-    color: #000;
-    box-shadow: 0 5px 0 #006600;
-    transition: transform 0.1s, box-shadow 0.1s;
-}
-
-#start-btn:active {
-    transform: translateY(4px);
-    box-shadow: 0 1px 0 #006600;
-}
-
-/* ============================================================
-   ÉLÉMENTS SPÉCIFIQUES (Niveau, Carte, Astro)
-   ============================================================ */
-
-#map {
-    height: 200px;
-    border-radius: 8px;
-    margin-top: 10px;
-}
-
-.spirit-level-container {
-    width: 100%;
-    height: 100px;
-    background: #111;
-    border: 1px solid #333;
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.spirit-level-bubble {
-    width: 20px;
-    height: 20px;
-    background: radial-gradient(circle, #0f0, #004400);
-    border-radius: 50%;
-    position: absolute;
-    box-shadow: 0 0 10px #0f0;
-}
-
-/* Horloge Minecraft */
-#minecraft-clock-container {
-    background: #000;
-    padding: 10px;
-    border-radius: 50%;
-    width: 120px;
-    height: 120px;
-    margin: 10px auto;
-    border: 2px solid #333;
-    position: relative;
-}
-
-hr { border: 0; border-top: 1px solid #222; margin: 10px 0; }
-class UKFPro {
-    constructor() {
-        this.velocity = 0;
-        this.distance = 0;
-        this.lastT = performance.now();
-        this.noiseFloor = 0.04; 
-    }
-/* Mode Nuit (Par défaut) */
-body.dark-mode {
-    --bg-dark: #050507;
-    --panel-bg: rgba(18, 18, 26, 0.95);
-    --text-main: #e0e0e0;
-    --border-dim: #252533;
-}
-
-/* Mode Jour (Haute Visibilité) */
-body.light-mode {
-    --bg-dark: #f0f2f5;
-    --panel-bg: #ffffff;
-    --text-main: #1a1a1b;
-    --border-dim: #d1d9e6;
-    --text-dim: #555555;
-}
-
-body.light-mode .panel {
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-    border: 1px solid #ccc;
+.data-point span[id] {
+    font-weight: 700;
+    font-family: 'Courier New', monospace;
+    color: #fff;
 }
 
 body.light-mode .data-point span[id] {
     color: #000;
 }
 
-body.light-mode h2 {
-    border-bottom: 2px solid #ddd;
+/* Couleurs Spécifiques par Colonne */
+.column-1 h2 { color: var(--accent-cyan); }
+.column-2 h2 { color: var(--accent-green); }
+.column-3 h2 { color: var(--accent-pink); }
+.column-4 h2 { color: var(--accent-gold); }
+
+/* HUD Fixe (Bas de l'écran) */
+.master-hud-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: linear-gradient(to top, rgba(0,0,0,0.9), transparent);
+    padding: 20px;
+    z-index: 1000;
+    pointer-events: none;
 }
 
-/* Amélioration de la bulle de niveau */
+.hud-box {
+    max-width: 600px;
+    margin: 0 auto;
+    background: rgba(10, 15, 20, 0.95);
+    border: 2px solid var(--accent-green);
+    border-radius: 15px;
+    padding: 20px;
+    pointer-events: auto;
+    text-align: center;
+    box-shadow: 0 0 30px rgba(0, 255, 136, 0.2);
+}
+
+#sp-main {
+    font-size: 4.5rem;
+    font-weight: 900;
+    color: #fff;
+    text-shadow: 0 0 15px var(--accent-green);
+    line-height: 1;
+}
+
+/* Boutons */
+button {
+    background: var(--glass);
+    border: 1px solid var(--border-dim);
+    color: var(--text-main);
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.2s;
+    text-transform: uppercase;
+    font-size: 0.7rem;
+}
+
+button:hover {
+    background: var(--accent-cyan);
+    color: #000;
+}
+
+#start-btn {
+    background: var(--accent-green);
+    color: #000;
+    width: 100%;
+    font-size: 1rem;
+    margin-top: 10px;
+}
+
+/* Niveau à Bulle (SVT/Sport) */
 .spirit-level-container {
-    background: #000;
-    border-radius: 50px;
+    width: 100%;
     height: 40px;
+    background: #000;
+    border-radius: 20px;
+    position: relative;
+    overflow: hidden;
+    border: 1px solid var(--border-dim);
     margin: 10px 0;
-            }        
+}
+
+.spirit-level-bubble {
+    width: 25px;
+    height: 25px;
+    background: radial-gradient(circle, #00ff88, #006633);
+    border-radius: 50%;
+    position: absolute;
+    top: 7.5px;
+    left: 50%;
+    transform: translateX(-50%);
+    box-shadow: 0 0 10px #00ff88;
+    transition: all 0.1s linear;
+}
+
+/* Alertes */
+#poi-alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: var(--accent-gold);
+    color: #000;
+    padding: 30px;
+    border-radius: 15px;
+    font-weight: 900;
+    font-size: 1.5rem;
+    z-index: 9999;
+    box-shadow: 0 0 100px rgba(255, 204, 0, 0.5);
+    border: 5px solid #fff;
+    display: none;
+}
+
+/* Carte & Clock Minecraft */
+#map {
+    height: 180px;
+    border-radius: 8px;
+    margin-top: 10px;
+    filter: brightness(0.8) contrast(1.2);
+}
+
+#minecraft-clock {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 4px solid var(--accent-gold);
+    margin: 10px auto;
+    position: relative;
+    background: #0a0a1a;
+    overflow: hidden;
+}
+
+.sun-element {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    color: #ffcc00;
+    font-size: 20px;
+    top: 10px;
+    left: 40px;
+    transition: transform 1s linear;
+}
+
+/* Responsive Design */
+@media (max-width: 1200px) {
+    .dashboard-container { grid-template-columns: repeat(2, 1fr); }
+}
+
+@media (max-width: 650px) {
+    .dashboard-container { grid-template-columns: 1fr; }
+    #sp-main { font-size: 3rem; }
+}
+
+/* Effets de Scanlines (Optionnel pour le look scientifique) */
+body::before {
+    content: " ";
+    display: block;
+    position: fixed;
+    top: 0; left: 0; bottom: 0; right: 0;
+    background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), 
+                linear-gradient(90deg, rgba(255, 0, 0, 0.02), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.02));
+    z-index: 2000;
+    background-size: 100% 2px, 3px 100%;
+    pointer-events: none;
+    }        
 </style>
 </head>
 <div id="poi-alert" style="display:none; position:fixed; top:20px; left:50%; transform:translateX(-50%); background:#ff0; color:#000; font-weight:bold; padding:20px; border-radius:10px; z-index:10000; box-shadow:0 0 30px #ff0;">
