--- a/index.html
+++ b/index.html
@@ -342,6 +342,7 @@
         </main>
                     
 <script src="vendor/math.min.js"></script>
+<script src="vendor/three.min.js"></script>    
 <script src="vendor/turf.min.js"></script>
 <script src="lib/ephem.js"></script>
 <script src="lib/astro.js"></script>
