--- a/index.html
+++ b/index.html
@@ -11,6 +11,240 @@
     <link rel="manifest" href="manifest.json">
           
 <style> 
+    /* ============================================================
+   OMNISCIENCE V100 PRO - ARCHITECTURE CSS FINALE
+   Cible : Haute Précision, Navigation Mobile & Souterraine
+   ============================================================ */
+
+:root {
+    --bg-dark: #050507;
+    --panel-bg: rgba(12, 12, 18, 0.92);
+    --border-dim: #252533;
+    --accent-cyan: #00d2ff;  /* Colonne 1 : Système */
+    --accent-green: #00ff88; /* Colonne 2 : Dynamique */
+    --accent-pink: #ff00ff;  /* Colonne 3 : Environnement */
+    --accent-gold: #ffcc00;  /* Colonne 4 : Astro */
+    --text-main: #e0e0e0;
+    --text-dim: #888888;
+    --danger: #ff4444;
+    --font-mono: 'Consolas', 'Courier New', monospace;
+}
+
+/* 1. RESET & BASE */
+* { 
+    box-sizing: border-box; 
+    margin: 0; 
+    padding: 0; 
+}
+
+body {
+    background-color: var(--bg-dark);
+    color: var(--text-main);
+    font-family: 'Segoe UI', sans-serif;
+    overflow-x: hidden;
+    padding-bottom: 180px; /* Espace pour le HUD fixe */
+}
+
+/* 2. GRID SYSTEM - FORCE 4 COLONNES STRICTES */
+.dashboard-container {
+    display: grid !important;
+    grid-template-columns: repeat(4, 1fr) !important; /* Force les 4 colonnes */
+    gap: 8px;
+    padding: 10px;
+    width: 100vw;
+}
+
+/* Adaptation Mobile (on garde les 4 colonnes mais on réduit la taille) */
+@media (max-width: 800px) {
+    .dashboard-container {
+        grid-template-columns: repeat(4, 1fr) !important;
+        gap: 4px;
+        padding: 5px;
+    }
+    
+    .panel {
+        padding: 6px !important;
+    }
+
+    h2 {
+        font-size: 0.55rem !important;
+    }
+
+    .data-point {
+        flex-direction: column;
+        align-items: flex-start !important;
+        font-size: 0.55rem !important;
+    }
+}
+
+/* 3. PANNEAUX ET DESIGN DES DONNÉES */
+.panel {
+    background: var(--panel-bg);
+    border: 1px solid var(--border-dim);
+    border-radius: 6px;
+    padding: 12px;
+    backdrop-filter: blur(8px);
+}
+
+h2 {
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 8px;
+    border-bottom: 1px solid rgba(255,255,255,0.1);
+    padding-bottom: 4px;
+}
+
+.column-1 h2 { color: var(--accent-cyan); }
+.column-2 h2 { color: var(--accent-green); }
+.column-3 h2 { color: var(--accent-pink); }
+.column-4 h2 { color: var(--accent-gold); }
+
+.data-point {
+    display: flex;
+    justify-content: space-between;
+    padding: 3px 0;
+    font-family: var(--font-mono);
+    border-bottom: 1px solid rgba(255,255,255,0.02);
+}
+
+.data-point span:first-child { color: var(--text-dim); }
+.data-point span[id] { color: #fff; font-weight: bold; }
+
+/* 4. LE HUD MAÎTRE (FIXÉ EN BAS) */
+.master-hud-fixed {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    z-index: 99999 !important;
+    padding: 15px;
+    background: linear-gradient(to top, rgba(0,0,0,1) 70%, transparent);
+    pointer-events: none; /* Laisse le clic passer à travers le vide */
+}
+
+.hud-display {
+    pointer-events: auto;
+    background: rgba(0, 20, 0, 0.9);
+    border: 2px solid var(--accent-green);
+    border-radius: 12px;
+    max-width: 500px;
+    margin: 0 auto 10px auto;
+    padding: 15px;
+    text-align: center;
+    box-shadow: 0 0 25px rgba(0, 255, 136, 0.2);
+}
+
+#sp-main-hud {
+    font-size: 3.5rem;
+    font-weight: 900;
+    color: #fff;
+    line-height: 1;
+}
+
+.unit { font-size: 1rem; color: var(--accent-green); }
+
+/* 5. BOUTONS D'ACTION (LIBÉRÉS) */
+.hud-actions {
+    pointer-events: auto;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+#start-btn-final {
+    width: 100%;
+    padding: 18px;
+    background: var(--accent-green);
+    color: #000;
+    border: none;
+    border-radius: 8px;
+    font-weight: 900;
+    font-size: 1rem;
+    cursor: pointer;
+    box-shadow: 0 4px 0 #006600;
+    text-transform: uppercase;
+}
+
+#start-btn-final:active {
+    transform: translateY(3px);
+    box-shadow: none;
+}
+
+.sub-btns {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.sub-btns button {
+    padding: 10px;
+    background: #1a1a26;
+    color: var(--accent-cyan);
+    border: 1px solid var(--accent-cyan);
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 0.7rem;
+    cursor: pointer;
+}
+
+/* 6. INSTRUMENTS SPÉCIFIQUES */
+/* Niveau à bulle */
+.spirit-level {
+    width: 100%;
+    height: 80px;
+    background: #000;
+    border: 1px solid #333;
+    position: relative;
+    border-radius: 4px;
+    margin-top: 5px;
+}
+
+#bubble {
+    width: 16px;
+    height: 16px;
+    background: radial-gradient(circle, var(--accent-green), #004400);
+    border-radius: 50%;
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 8px var(--accent-green);
+}
+
+/* Horloge Minecraft */
+#minecraft-clock-container {
+    width: 80px;
+    height: 80px;
+    border: 2px solid #333;
+    border-radius: 50%;
+    margin: 5px auto;
+    position: relative;
+    overflow: hidden;
+    background: #000;
+}
+
+#minecraft-clock {
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, #4488ff 50%, #000033 50%);
+    transition: transform 1s linear; /* Rotation fluide ephem.js */
+}
+
+/* Alertes SHAKE/POI */
+#poi-alert {
+    position: fixed;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #ff0;
+    color: #000;
+    padding: 15px;
+    font-weight: bold;
+    border-radius: 8px;
+    z-index: 100000;
+    display: none;
+    box-shadow: 0 0 30px #ff0;
+    }
 </style>
 </head>
 <div id="poi-alert" style="display:none; position:fixed; top:20px; left:50%; transform:translateX(-50%); background:#ff0; color:#000; font-weight:bold; padding:20px; border-radius:10px; z-index:10000; box-shadow:0 0 30px #ff0;">
