--- a/index.html
+++ b/index.html
@@ -583,6 +583,8 @@ button {
 <script src="lib/astro.js"></script>
 <script src="lib/ntp-master.js"></script>    
 <script src="lib/ukf-lib.js"></script>
+<script src="lib/weather-engine.js"></script>
+<script src="lib/navigation-3d.js"></script>    
 
 <script src="gnss-dashboard-full.js"></script>
                     
