--- a/index.html
+++ b/index.html
@@ -595,7 +595,8 @@ button {
 <script src="lib/ukf-lib.js"></script>
 <script src="lib/weather-engine.js"></script>
 <script src="lib/navigation-3d.js"></script>    
-
+<script src="lib/weather-engine.js"></script>
+    
 <script src="gnss-dashboard-full.js"></script>
                     
 </body>
