--- a/index.html
+++ b/index.html
@@ -596,6 +596,7 @@ button {
 <script src="lib/weather-engine.js"></script>
 <script src="lib/navigation-3d.js"></script>    
 <script src="lib/weather-engine.js"></script>
+<script src="lib/seismic-report.js"></script>    
     
 <script src="gnss-dashboard-full.js"></script>
                     
