--- a/index.html
+++ b/index.html
@@ -12,127 +12,115 @@
           
 <style>
 /* ============================================================
-   OMNISCIENCE V100 PRO - ERGONOMIC PILOT INTERFACE
+   OMNISCIENCE V100 PRO - ÉQUILIBRE 4 COLONNES
    ============================================================ */
 
 :root {
     --bg: #000000;
-    --card: #15151a;
+    --card: #111115;
     --accent: #00ff88;
     --text: #ffffff;
-    --subtext: #8888b0;
-    --radius: 12px;
-}
-
-/* MODE GROTTE TACTIQUE */
-body.night-mode {
-    --accent: #ff0000;
-    --card: #1a0505;
 }
 
 body {
     background: var(--bg);
     color: var(--text);
-    font-family: 'Segoe UI', Roboto, sans-serif;
+    font-family: 'Consolas', monospace;
     margin: 0;
-    padding: 10px;
+    padding: 5px;
     display: flex;
     flex-direction: column;
     height: 100vh;
     box-sizing: border-box;
 }
 
-/* GRILLE PRATIQUE : 2 COLONNES LARGES */
+/* LE HUD : Toujours en haut, bien large */
+.master-hud-fixed {
+    width: 100%;
+    background: #000;
+    border-bottom: 2px solid var(--accent);
+    padding: 10px 0;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+#sp-main-hud {
+    font-size: 4rem;
+    font-weight: 900;
+    color: var(--accent);
+    line-height: 1;
+}
+
+/* LA GRILLE : 4 Colonnes strictement égales */
 main {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto;
-    gap: 12px;
+    /* On force 4 colonnes de taille identique (1fr chacune) */
+    grid-template-columns: repeat(4, 1fr);
+    gap: 6px;
     flex: 1;
 }
 
 .panel {
     background: var(--card);
-    border-radius: var(--radius);
-    padding: 15px;
+    border: 1px solid #222;
+    border-radius: 4px;
+    padding: 8px 4px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    border: 1px solid rgba(255,255,255,0.05);
+    align-items: center;
+    justify-content: flex-start;
+    overflow: hidden; /* Empêche les chiffres longs de casser la boîte */
 }
 
-/* HUD DE VITESSE : PREND TOUTE LA LARGEUR EN HAUT */
-.master-hud-fixed {
-    grid-column: 1 / span 2;
-    background: linear-gradient(180deg, #1a1a20 0%, #000 100%);
-    border-radius: var(--radius);
-    padding: 20px;
+/* Titres de colonnes */
+h3 {
+    font-size: 0.6rem;
+    margin: 0 0 8px 0;
+    text-transform: uppercase;
+    color: #888;
     text-align: center;
-    border-bottom: 3px solid var(--accent);
-    margin-bottom: 10px;
 }
 
-#sp-main-hud {
-    font-size: 6rem;
-    font-weight: 800;
-    color: var(--accent);
-    line-height: 1;
-}
-
-/* DONNÉES CLÉES EN GROS */
+/* Points de données empilés pour tenir dans la largeur */
 .data-point {
+    width: 100%;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
+    border-bottom: 1px solid #1a1a1a;
 }
 
 .data-point span:first-child {
     display: block;
-    color: var(--subtext);
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    margin-bottom: 4px;
+    font-size: 0.55rem;
+    color: #555;
+    margin-bottom: 2px;
 }
 
 .val {
-    font-size: 1.4rem;
+    font-size: 0.8rem;
     font-weight: bold;
-    color: #fff;
+    color: #eee;
+    word-break: break-all; /* Force le retour à la ligne si 1024-bit */
 }
 
-.val-long {
-    font-size: 0.6rem; /* On garde les 1024 bits discrets */
-    color: var(--accent);
-}
-
-/* BOUTON D'ACTION GÉANT */
+/* Bouton START plein écran en bas */
 #start-btn-final {
-    grid-column: 1 / span 2;
+    margin-top: 10px;
+    width: 100%;
+    padding: 15px;
     background: var(--accent);
     color: #000;
     border: none;
-    border-radius: var(--radius);
-    font-size: 1.2rem;
     font-weight: bold;
-    padding: 20px;
+    border-radius: 4px;
     text-transform: uppercase;
-    box-shadow: 0 4px 15px rgba(0, 255, 136, 0.3);
 }
 
-/* CARTE SIMPLIFIÉE */
-#map {
-    height: 100px;
-    border-radius: 8px;
-    margin-top: 10px;
-    filter: grayscale(1) invert(1);
+/* Mode Nuit */
+body.night-mode {
+    --accent: #ff0000;
+    --card: #150000;
 }
-
-/* OSCILLOSCOPE DISCRET */
-#telemetry-canvas {
-    width: 100%;
-    height: 40px;
-    opacity: 0.5;
-}
-
 </style>    
 </head>
  
@@ -325,7 +313,6 @@ main {
                 <div class="data-point"><span>Distance Horizon (s)</span><span id="horizon-distance-km">--</span></div>
                 <div class="data-point"><span>Visibilité Cible</span><span id="horizon-target-visibility">--</span></div>
                 <div class="data-point"><span>Promenade Microscopique</span><span id="total-path-inf">--</span></div>
-                <div class="data-point"><span>Distance Précise (UKF)</span><span id="distance-3d-precise-ukf">--</span></div>
             </section>
 
             <section class="panel" aria-labelledby="map-heading">
@@ -393,7 +380,7 @@ main {
                 <div class="data-point"><span>Puissance (Watts):</span> <span id="human-power-w">-- W</span></div>
                 <div class="data-point"><span>Adrénaline Index:</span> <span id="adrenaline-idx">-.- / 10</span></div>
                 <div class="data-point" style="background:rgba(0,255,0,0.1);"><span>Score Fluidité:</span> <span id="smoothness-score">---/100</span></div>
-                <div class="data-point"><span>Calories (METs):</span> <span id="calories-burn">-.- kcal</span></div>
+                <div class="data-point"><span>Calories (METs):</span> <span id="cal-val">>-.- kcal</span></div>
             </section>
     
             <section class="panel" aria-labelledby="ekf-heading">
@@ -491,7 +478,7 @@ main {
                 <div class="data-point"><span>Distance Lune</span> <span id="moon-distance">--</span></div>
                 <section class="panel" style="grid-column: 1 / -1;">
     <h2><i class="fas fa-chart-line"></i> Télémétrie Inertielle (64-bit)</h2>
-    <canvas id="telemetry-canvas" width="800" height="200" style="width:100%; height:200px; background:#000;"></canvas>
+    <canvas id="telemetry-history" width="800" height="200" style="width:100%; height:200px; background:#000;"></canvas>
                     <div class="panel">
     <div class="label" style="color:#ffcc00;">📜 JOURNAL DES ANOMALIES & TRÉSORS</div>
     <div id="treasure-log-display">En attente de détection...</div>
