--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@ body.night-mode {
     --accent: #ff0000;
     --card: #150000;
 }
+input { font-size: 16px; padding: 8px; }   
+margin-bottom: 20px;    
 </style>    
 </head>
  
@@ -133,7 +135,7 @@ body.night-mode {
     <div class="hud-display">
         <div id="sp-main-hud">-.-----</div>
     <div class="hud-label">km/h • SINGULARITY CORE</div>
-    <canvas id="telemetry-canvas"></canvas>
+    <canvas id="telemetry-mini"></canvas>
     <button id="start-btn-final">DÉMARRER LE NOYAU</button>
     </div>
 </div>
@@ -476,14 +478,15 @@ body.night-mode {
                 <div class="data-point"><span>Azimut (Lune)</span><span id="moon-azimuth">--</span></div>
                 <div class="data-point"><span>Lever/Coucher Lune</span><span id="moon-times">--</span></div>
                 <div class="data-point"><span>Distance Lune</span> <span id="moon-distance">--</span></div>
-                <section class="panel" style="grid-column: 1 / -1;">
-    <h2><i class="fas fa-chart-line"></i> Télémétrie Inertielle (64-bit)</h2>
-    <canvas id="telemetry-history" width="800" height="200" style="width:100%; height:200px; background:#000;"></canvas>
+                
                     <div class="panel">
     <div class="label" style="color:#ffcc00;">📜 JOURNAL DES ANOMALIES & TRÉSORS</div>
     <div id="treasure-log-display">En attente de détection...</div>
                     </div>
              </section>
+            <section class="panel" style="grid-column: 1 / -1;">
+    <h2><i class="fas fa-chart-line"></i> Télémétrie Inertielle (64-bit)</h2>
+    <canvas id="telemetry-main" width="800" height="200" style="width:100%; height:200px; background:#000;"></canvas>
         </main>
                     
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
