--- a/index.html
+++ b/index.html
@@ -481,7 +481,32 @@ canvas {
     <h2><i class="fas fa-chart-line"></i> Télémétrie Inertielle (64-bit)</h2>
     <canvas id="telemetry-canvas" width="800" height="200" style="width:100%; height:200px; background:#000;"></canvas>
         </main>
-        <section class="panel" style="grid-column: 1 / -1;">            
+        <main style="display: grid; grid-template-columns: repeat(4, minmax(0, 1fr));">
+    
+    <div class="column-fix">
+        <section class="panel"> ... SYSTÈME ... </section>
+        <section class="panel"> ... IMU ... </section>
+    </div>
+
+    <div class="column-fix">
+        <section class="panel"> ... CINÉMATIQUE ... </section>
+        <section class="panel"> ... PHYSIQUE ... </section>
+    </div>
+
+    <div class="column-fix">
+        <section class="panel"> ... MÉTÉO ... </section>
+        <section class="panel"> ... BIO/SVT ... </section>
+    </div>
+
+    <div class="column-fix">
+        <section class="panel"> ... POSITION ... </section>
+        <div id="map"></div> </div>
+
+    <section class="panel" style="grid-column: 1 / -1;">
+        <canvas id="telemetry-canvas"></canvas>
+    </section>
+
+        </main>            
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
 <script src="vendor/three.min.js"></script>
 <script src="vendor/turf.min.js"></script>
