--- a/index.html
+++ b/index.html
@@ -9,271 +9,66 @@
     <link rel="stylesheet" href="leaflet.css" />
     <link rel="stylesheet" href="fontawesome.min.css" />
     <link rel="manifest" href="manifest.json">
-          
 <style>
-/* ==========================================================================
-   OMNISCIENCE V200 PRO - CSS FINAL (RESPONSIVE & THÉMATIQUE)
-   ========================================================================== */
-
-/* 1. VARIABLES & THÈMES (JOUR / NUIT) */
 :root {
-    /* --- THÈME PAR DÉFAUT (NUIT / DARK MODE) --- */
-    --bg: #050505;              /* Fond noir profond */
-    --card: #121216;            /* Panneaux gris sombre */
-    --border: #2a2a30;          /* Bordures discrètes */
-    --text: #e0e0e0;            /* Texte principal clair */
-    --text-dim: #888890;        /* Libellés grisés */
-    --accent: #00ff88;          /* Vert Matrix (Valeurs) */
-    --alert: #ffcc00;           /* Jaune (Boutons actifs) */
-    --danger: #ff3333;          /* Rouge (Erreurs) */
-    --hud-bg: rgba(0, 0, 0, 0.95); /* Fond du HUD semi-transparent */
-}
-
-/* --- THÈME JOUR (LIGHT MODE) - Activé via la classe .light-mode --- */
-body.light-mode {
-    --bg: #f0f2f5;              /* Fond gris très clair */
-    --card: #ffffff;            /* Panneaux blancs */
-    --border: #ccc;             /* Bordures grises */
-    --text: #1a1a1a;            /* Texte noir */
-    --text-dim: #555;           /* Libellés gris moyen */
-    --accent: #0066cc;          /* Bleu Profond (plus lisible sur blanc) */
-    --alert: #ff9900;           /* Orange vif */
-    --danger: #cc0000;          /* Rouge sombre */
-    --hud-bg: rgba(255, 255, 255, 0.95);
-}
-
-/* 2. CONFIGURATION GÉNÉRALE */
-* {
-    box-sizing: border-box; /* Empêche les padding de casser la largeur */
+    --bg: #050505;
+    --card: #121216;
+    --border: #2a2a30;
+    --text: #e0e0e0;
+    --accent: #00ff88;
 }
 
 body {
-    background-color: var(--bg);
+    background: var(--bg);
     color: var(--text);
-    font-family: 'Consolas', 'Monaco', 'Courier New', monospace; /* Police technique */
+    font-family: 'Consolas', monospace;
     margin: 0;
-    padding: 5px;
-    padding-bottom: 40px; /* Espace pour scroller jusqu'en bas */
-    transition: background-color 0.3s ease, color 0.3s ease; /* Transition douce Jour/Nuit */
-    overflow-x: hidden; /* Interdit le scroll horizontal */
+    padding: 0;
+    overflow-x: hidden;
 }
 
-/* 3. LE HUD (AFFICHAGE TÊTE HAUTE) - FIXE EN HAUT */
+/* HUD Fixe en haut */
 .master-hud-fixed {
     position: sticky;
     top: 0;
-    z-index: 1000; /* Reste toujours au-dessus */
-    background: var(--hud-bg);
-    border-bottom: 3px solid var(--accent);
-    padding: 10px 0;
-    text-align: center;
-    margin: -5px -5px 15px -5px; /* Compense le padding du body */
-    box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    width: 100%;
+    background: rgba(0,0,0,0.9);
+    border-bottom: 2px solid var(--accent);
+    z-index: 1000;
+    padding: 15px 0;
 }
 
-#sp-main-hud {
-    font-size: 3.5rem; /* Très gros pour la vitesse */
-    font-weight: 900;
-    color: var(--accent);
-    line-height: 1;
-    text-shadow: 0 0 10px var(--accent); /* Effet néon */
-}
-
-.hud-label {
-    font-size: 0.75rem;
-    color: var(--text-dim);
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    margin-bottom: 5px;
-}
-
-/* 4. LA GRILLE INTELLIGENTE (LAYOUT) */
+/* GRILLE PROFESSIONNELLE 4 COLONNES */
 main {
     display: grid;
-    /* PC : 4 colonnes strictement égales */
-    grid-template-columns: repeat(4, minmax(0, 1fr)); 
+    grid-template-columns: repeat(4, 1fr); /* Force 4 colonnes */
     gap: 8px;
+    padding: 10px;
     width: 100%;
+    box-sizing: border-box;
 }
 
-/* --- ADAPTATION MOBILE (LE SECRET DU CONFORT) --- */
-/* Tablettes (iPad, etc.) : Passe à 2 colonnes */
-@media (max-width: 1024px) {
-    main {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
+/* Responsive : On ne passe en 1 colonne que sur tout petit écran */
+@media (max-width: 800px) {
+    main { grid-template-columns: repeat(2, 1fr); }
 }
 
-/* Mobiles (iPhone, Android) : Passe à 1 colonne (Empilement) */
-/* C'est ce qui rend la lecture confortable sur petit écran */
-@media (max-width: 600px) {
-    main {
-        grid-template-columns: 1fr; /* Une seule colonne large */
-        gap: 12px;
-    }
-    
-    #sp-main-hud {
-        font-size: 2.8rem; /* Réduit un peu la vitesse pour mobile */
-    }
-}
-
-/* 5. LES PANNEAUX (PANELS) */
 .panel {
     background: var(--card);
     border: 1px solid var(--border);
-    border-radius: 6px;
-    padding: 8px;
-    display: flex;
-    flex-direction: column;
-    /* Important : empêche le contenu de forcer la largeur */
-    min-width: 0; 
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    padding: 10px;
+    border-radius: 4px;
 }
 
-.panel.full-width {
-    /* La section télémétrie prend toute la largeur disponible */
-    grid-column: 1 / -1;
-    margin-top: 10px;
-}
+.full-width { grid-column: 1 / -1; }
 
-h3, h2 {
-    margin: 0 0 8px 0;
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    color: var(--text-dim);
-    border-bottom: 1px solid var(--border);
-    padding-bottom: 4px;
-    text-align: center;
-    letter-spacing: 1px;
-}
-
-/* 6. LES DONNÉES (DATA POINTS) */
 .data-point {
     display: flex;
-    flex-direction: column; /* Label au-dessus, Valeur en dessous */
-    align-items: center;
-    width: 100%;
-    margin-bottom: 8px;
-    border-bottom: 1px dashed var(--border);
-    padding-bottom: 4px;
-}
-
-.data-point span:first-child {
-    font-size: 0.6rem;
-    color: var(--text-dim);
-    margin-bottom: 2px;
-    text-transform: uppercase;
-}
-
-.val {
-    font-size: 0.9rem;
-    font-weight: bold;
-    color: var(--text);
-    /* Gère les nombres trop longs (1024-bit) */
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 100%;
-}
-
-/* Met en valeur les chiffres importants */
-.val[id="speed-stable-kmh"],
-.val[id="lorentz-factor"] {
-    color: var(--accent);
-    font-size: 1.1rem;
-}
-
-/* 7. ÉLÉMENTS GRAPHIQUES (CANVAS & MAP) */
-canvas {
-    width: 100% !important; /* Force le graphique à tenir dans la boite */
-    height: auto;
-    background: #000; /* Toujours noir pour le contraste du graph */
-    border: 1px solid var(--border);
-    border-radius: 4px;
-    display: block;
-}
-
-#map {
-    width: 100% !important;
-    height: 200px; /* Hauteur fixe confortable */
-    background-color: #222;
-    border: 1px solid var(--border);
-    border-radius: 4px;
-    z-index: 1;
-}
-
-/* 8. INTERACTIVITÉ (BOUTONS & INPUTS) */
-button {
-    background: var(--card);
-    color: var(--text);
-    border: 1px solid var(--border);
-    padding: 12px; /* Zone de touche large pour les doigts */
-    margin-top: 5px;
-    width: 100%;
-    cursor: pointer;
-    font-family: inherit;
-    font-weight: bold;
-    text-transform: uppercase;
+    justify-content: space-between;
     font-size: 0.75rem;
-    border-radius: 4px;
-    transition: all 0.2s;
+    margin-bottom: 4px;
+    border-bottom: 1px solid #1a1a1a;
 }
-
-button:active {
-    transform: scale(0.98); /* Effet de clic */
-}
-
-/* Bouton principal (Démarrer) */
-#start-btn-final {
-    background: var(--accent);
-    color: #000; /* Texte noir sur fond néon */
-    border: none;
-    font-size: 1rem;
-    margin-bottom: 5px;
-}
-
-/* Inputs (Champs de saisie masse, etc.) */
-input, select {
-    background: var(--bg);
-    color: var(--text);
-    border: 1px solid var(--border);
-    padding: 8px;
-    width: 100%;
-    text-align: center;
-    font-family: inherit;
-    border-radius: 4px;
-}
-
-/* 9. UTILITAIRES & ICÔNES */
-hr {
-    border: 0;
-    border-top: 1px solid var(--border);
-    width: 100%;
-    margin: 10px 0;
-}
-
-/* Niveau à bulle (Spécifique) */
-.spirit-level-container {
-    width: 100px;
-    height: 100px;
-    border: 2px solid var(--border);
-    border-radius: 50%;
-    position: relative;
-    background: var(--bg);
-    margin: 10px auto;
-}
-.spirit-level-bubble {
-    width: 20px;
-    height: 20px;
-    background: var(--accent);
-    border-radius: 50%;
-    position: absolute;
-    top: 50%; left: 50%;
-    margin-top: -10px; margin-left: -10px;
-    transition: transform 0.1s linear;
-}
-
-/* --- FIN DU CSS --- */
 </style>    
 </head>
  
